# honey

./: .gitignore  ARCHITECTURE_IMPROVEMENTS.md  CODEBASE_REVIEW_REPORT.md  DEPENDENCY_SECURITY_REPORT.md  Dockerfile  GAME_IMPROVEMENTS.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  README.md  Render.yaml  dev.bat  index.html  leverage_service.py  next.config.js  package-lock.json  package.json  python_server.py  server.js  tsconfig.dev.json  tsconfig.json  vite.config.ts
docs/: FAQ.md  Help_Flights_And_Visuals.md  USAGE.md
public/: index.html
python/: __init__.py  leverage_service.py  pyproject.toml  server_state.json  setup.py
python/enhanced_leverage_system/: __init__.py  leverage_service.py
scripts/: dev.js
src/: App.tsx  main.tsx  polyfills.ts  vite-env.d.ts
src/components/: CharacterCreation.tsx  CreateCharacterModal.tsx  GameWorld.tsx  GameWorld.tsx.bak  HUD.tsx  HarvestResults.tsx  LeverageDisplay.tsx  LoadingBoundary.tsx  Mission.tsx  MissionsPanel.tsx  OptimizedGameWorld.tsx  ProgressSystem.tsx  Resource.tsx  StoryOverlay.tsx  Territory.tsx  TestEnvironment.tsx  TestInitializer.tsx  TestRunner.tsx  Tutorial.tsx
src/config/: appConfig.ts  honeycomb.config.ts
src/context/: GameContext.tsx  GameContextWithDI.tsx  WalletContext.tsx
src/hooks/: useHoneycomb.ts  useOptimization.ts  usePerformanceOptimization.ts
src/providers/: WalletProvider.tsx
src/services/: CharacterManager.ts  CombatSystem.ts  CraftingSystem.ts  FactionDynamics.ts  LeverageOptimizer.ts  LeverageService.ts  LeverageServiceOffline.ts  LeverageVisualizer.ts  (+11 more)
unity/: README.md
(+63 files in other folders)
