[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enhanced_leverage_system"
version = "3.2.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
description = "Enhanced leverage system for game mechanics"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/honey_comb_protocol"
"Bug Tracker" = "https://github.com/yourusername/honey_comb_protocol/issues"